--- a/src/app/chameleon-reports/cameleon-no-case-number-reasons/cameleon-no-case-number-reasons.component.html
+++ b/src/app/chameleon-reports/cameleon-no-case-number-reasons/cameleon-no-case-number-reasons.component.html
@@ -34,7 +34,26 @@
       </div>
     </div>
   </form>
-
+  <div class="gauge-container">
+    <ngx-gauge
+      [type]="gaugeType"
+      [value]="gaugeValue"
+      [label]="'%'"
+      [max]="100"
+      [size]="gaugeSize"
+      [thick]="gaugeThick"
+      [foregroundColor]="gaugeForegroundColor"
+      [backgroundColor]="gaugeBackgroundColor"
+      [cap]="'round'">
+    </ngx-gauge>
+  
+    <div class="gauge-info">
+      <p>סה"כ רשומות: <strong>{{ totalRows }}</strong></p>
+      <p>רשומות שעודכנו: <strong>{{ updatedRows }}</strong></p>
+    </div>
+  </div>
+  
+  
   <div class="table-responsive">
     <mat-table [dataSource]="matTableDataSource" matSort dir="rtl" class="mat-elevation-z8">
    
@@ -58,7 +77,7 @@
     </mat-table>
   </div>
 
-  <mat-paginator [pageSize]="10" [pageSizeOptions]="[10, 25, 50]" showFirstLastButtons></mat-paginator>
+  <mat-paginator [pageSize]="5" [pageSizeOptions]="[10, 25, 50]" showFirstLastButtons></mat-paginator>
 </div>
 <ng-template #dialogTemplate let-data >
     <h2 mat-dialog-title class="dialog-title">הוסף סיבה</h2>
